feat: add hotel management functionality